z-index fix for region-search from 450 to 495 to it is above facets sidebar

--- a/sites/all/themes/occupy_directory/css/header-layout.css
+++ b/sites/all/themes/occupy_directory/css/header-layout.css
@@ -228,7 +228,7 @@ nav a:hover { background-color: #000; color: #fc0; }
   */
   #region-search {
     position: relative;
-    z-index: 450;
+    z-index: 496;
   }
 
   #region-menu{
